// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Controlled 1`] = `
<h1>
  Retting av prøver
</h1>
<fieldset
  data-toggle-group
  data-variant="primary"
>
  <label data-variant="tertiary">
    <input
      type="radio"
      value="answers"
      name="togglegroup-name-_r_18_"
    >
    <svg
      xmlns="http://www.w3.org/2000/svg"
      width="1em"
      height="1em"
      fill="none"
      viewbox="0 0 24 24"
      focusable="false"
      role="img"
      aria-hidden="true"
    >
      <path
        fill="currentColor"
        fill-rule="evenodd"
        d="M5.75 20.25V3.75h12.5v16.5zm-.25-18c-.69 0-1.25.56-1.25 1.25v17c0 .69.56 1.25 1.25 1.25h13c.69 0 1.25-.56 1.25-1.25v-17c0-.69-.56-1.25-1.25-1.25zm5.45 3.9a.75.75 0 0 1 .15 1.05l-1.5 2a.75.75 0 0 1-1.13.08l-1-1a.75.75 0 0 1 1.06-1.06l.389.388L9.9 6.3a.75.75 0 0 1 1.05-.15M13 7.25a.75.75 0 0 0 0 1.5h2.5a.75.75 0 0 0 0-1.5zm-4 4a.75.75 0 0 0 0 1.5h.01a.75.75 0 0 0 0-1.5zm2.25.75a.75.75 0 0 1 .75-.75h3.5a.75.75 0 0 1 0 1.5H12a.75.75 0 0 1-.75-.75m0 4a.75.75 0 0 1 .75-.75h3.5a.75.75 0 0 1 0 1.5H12a.75.75 0 0 1-.75-.75m-3 0a.75.75 0 0 1 .75-.75h.01a.75.75 0 0 1 0 1.5H9a.75.75 0 0 1-.75-.75"
        clip-rule="evenodd"
      >
      </path>
    </svg>
    Ikke påbegynt
  </label>
  <label data-variant="tertiary">
    <input
      type="radio"
      value="drafts"
      name="togglegroup-name-_r_18_"
    >
    <svg
      xmlns="http://www.w3.org/2000/svg"
      width="1em"
      height="1em"
      fill="none"
      viewbox="0 0 24 24"
      focusable="false"
      role="img"
      aria-hidden="true"
    >
      <path
        fill="currentColor"
        fill-rule="evenodd"
        d="M16.97 2.97a2.871 2.871 0 1 1 4.06 4.06l-1.5 1.5-4.333 4.333a1.75 1.75 0 0 1-.684.423l-4.276 1.425a.75.75 0 0 1-.949-.948l1.426-4.276c.086-.258.23-.492.423-.684l4.33-4.33.003-.003.003-.003zM16 6.06l-3.803 3.803a.25.25 0 0 0-.06.098l-.951 2.853 2.853-.95a.25.25 0 0 0 .098-.061L17.939 8zm3 .88L17.06 5l.97-.97a1.371 1.371 0 0 1 1.94 1.94zM3.25 5c0-.966.784-1.75 1.75-1.75h7a.75.75 0 0 1 0 1.5H5a.25.25 0 0 0-.25.25v14c0 .138.112.25.25.25h14a.25.25 0 0 0 .25-.25v-7a.75.75 0 0 1 1.5 0v7A1.75 1.75 0 0 1 19 20.75H5A1.75 1.75 0 0 1 3.25 19z"
        clip-rule="evenodd"
      >
      </path>
    </svg>
    Under arbeid
  </label>
  <label data-variant="tertiary">
    <input
      type="radio"
      value="correctedAnswers"
      checked
      name="togglegroup-name-_r_18_"
    >
    <svg
      xmlns="http://www.w3.org/2000/svg"
      width="1em"
      height="1em"
      fill="none"
      viewbox="0 0 24 24"
      focusable="false"
      role="img"
      aria-hidden="true"
    >
      <path
        fill="currentColor"
        fill-rule="evenodd"
        d="M3.75 12a8.25 8.25 0 1 1 16.5 0 8.25 8.25 0 0 1-16.5 0M12 2.25c-5.385 0-9.75 4.365-9.75 9.75s4.365 9.75 9.75 9.75 9.75-4.365 9.75-9.75S17.385 2.25 12 2.25m4.573 7.234a.75.75 0 1 0-1.146-.968l-4.973 5.877L8.03 11.97a.75.75 0 0 0-1.06 1.06l3 3a.75.75 0 0 0 1.102-.046z"
        clip-rule="evenodd"
      >
      </path>
    </svg>
    Ferdig
  </label>
</fieldset>
<table style="table-layout: fixed;">
  <thead>
    <tr>
      <th>
        Navn
      </th>
      <th>
        Fag
      </th>
      <th>
        Karakter
      </th>
      <th style="text-align: right;">
        Se retting
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        Per Hansen
      </td>
      <td>
        Naturfag
      </td>
      <td>
        6
      </td>
      <td style="display: flex; justify-content: flex-end;">
        <button
          data-icon="true"
          data-variant="tertiary"
          type="button"
          aria-label="Se retting"
          data-tooltip="Se retting"
          data-placement="top"
          data-autoplacement="true"
        >
          <svg
            xmlns="http://www.w3.org/2000/svg"
            width="1em"
            height="1em"
            fill="none"
            viewbox="0 0 24 24"
            focusable="false"
            role="img"
            aria-hidden="true"
          >
            <path
              fill="currentColor"
              d="M14.088 6.873a.75.75 0 0 1 .942.097l4.5 4.5a.75.75 0 0 1 0 1.06l-4.5 4.5a.75.75 0 0 1-1.06-1.06l3.22-3.22H5a.75.75 0 0 1-.75-.74V12a.75.75 0 0 1 .75-.75h12.19l-3.22-3.22a.75.75 0 0 1 .118-1.157"
            >
            </path>
          </svg>
        </button>
      </td>
    </tr>
    <tr>
      <td>
        Ola Nordmann
      </td>
      <td>
        Engelsk
      </td>
      <td>
        4
      </td>
      <td style="display: flex; justify-content: flex-end;">
        <button
          data-icon="true"
          data-variant="tertiary"
          type="button"
          aria-label="Se retting"
          data-tooltip="Se retting"
          data-placement="top"
          data-autoplacement="true"
        >
          <svg
            xmlns="http://www.w3.org/2000/svg"
            width="1em"
            height="1em"
            fill="none"
            viewbox="0 0 24 24"
            focusable="false"
            role="img"
            aria-hidden="true"
          >
            <path
              fill="currentColor"
              d="M14.088 6.873a.75.75 0 0 1 .942.097l4.5 4.5a.75.75 0 0 1 0 1.06l-4.5 4.5a.75.75 0 0 1-1.06-1.06l3.22-3.22H5a.75.75 0 0 1-.75-.74V12a.75.75 0 0 1 .75-.75h12.19l-3.22-3.22a.75.75 0 0 1 .118-1.157"
            >
            </path>
          </svg>
        </button>
      </td>
    </tr>
    <tr>
      <td>
        Kari Nordmann
      </td>
      <td>
        Engelsk
      </td>
      <td>
        5
      </td>
      <td style="display: flex; justify-content: flex-end;">
        <button
          data-icon="true"
          data-variant="tertiary"
          type="button"
          aria-label="Se retting"
          data-tooltip="Se retting"
          data-placement="top"
          data-autoplacement="true"
        >
          <svg
            xmlns="http://www.w3.org/2000/svg"
            width="1em"
            height="1em"
            fill="none"
            viewbox="0 0 24 24"
            focusable="false"
            role="img"
            aria-hidden="true"
          >
            <path
              fill="currentColor"
              d="M14.088 6.873a.75.75 0 0 1 .942.097l4.5 4.5a.75.75 0 0 1 0 1.06l-4.5 4.5a.75.75 0 0 1-1.06-1.06l3.22-3.22H5a.75.75 0 0 1-.75-.74V12a.75.75 0 0 1 .75-.75h12.19l-3.22-3.22a.75.75 0 0 1 .118-1.157"
            >
            </path>
          </svg>
        </button>
      </td>
    </tr>
  </tbody>
</table>
<button
  data-variant="secondary"
  type="button"
  style="width: fit-content; margin-top: var(--ds-size-4);"
>
  Se ikke påbegynt
</button>
`;

exports[`Only Icons 1`] = `
<fieldset
  data-toggle-group
  data-variant="primary"
>
  <label
    aria-label="Venstrestilt"
    data-tooltip="Venstrestilt"
    data-placement="top"
    data-autoplacement="true"
    data-variant="tertiary"
  >
    <input
      type="radio"
      value="venstrestilt"
      checked
      name="togglegroup-name-_r_q_"
    >
    <svg
      xmlns="http://www.w3.org/2000/svg"
      width="1em"
      height="1em"
      fill="none"
      viewbox="0 0 24 24"
      focusable="false"
      role="img"
      aria-hidden="true"
    >
      <path
        fill="currentColor"
        fill-rule="evenodd"
        d="M4 3.25a.75.75 0 0 1 .75.75v16a.75.75 0 0 1-1.5 0V4A.75.75 0 0 1 4 3.25M6.25 6A.75.75 0 0 1 7 5.25h13a.75.75 0 0 1 .75.75v4a.75.75 0 0 1-.75.75H7a.75.75 0 0 1-.75-.75zm1.5.75v2.5h11.5v-2.5zM7 13.25a.75.75 0 0 0-.75.75v4c0 .414.336.75.75.75h7a.75.75 0 0 0 .75-.75v-4a.75.75 0 0 0-.75-.75zm.75 4v-2.5h5.5v2.5z"
        clip-rule="evenodd"
      >
      </path>
    </svg>
  </label>
  <label
    aria-label="Midtstilt"
    data-tooltip="Midtstilt"
    data-placement="top"
    data-autoplacement="true"
    data-variant="tertiary"
  >
    <input
      type="radio"
      value="midtstilt"
      name="togglegroup-name-_r_q_"
    >
    <svg
      xmlns="http://www.w3.org/2000/svg"
      width="1em"
      height="1em"
      fill="none"
      viewbox="0 0 24 24"
      focusable="false"
      role="img"
      aria-hidden="true"
    >
      <path
        fill="currentColor"
        fill-rule="evenodd"
        d="M12 3.25a.75.75 0 0 1 .75.75v1.25h5.75a.75.75 0 0 1 .75.75v4a.75.75 0 0 1-.75.75h-5.75v2.5h2.75a.75.75 0 0 1 .75.75v4a.75.75 0 0 1-.75.75h-2.75V20a.75.75 0 0 1-1.5 0v-1.25H8.5a.75.75 0 0 1-.75-.75v-4a.75.75 0 0 1 .75-.75h2.75v-2.5H5.5a.75.75 0 0 1-.75-.75V6a.75.75 0 0 1 .75-.75h5.75V4a.75.75 0 0 1 .75-.75m-.75 11.5h-2v2.5h2zm1.5 2.5h2v-2.5h-2zm-6.5-10.5h5v2.5h-5zm6.5 0v2.5h5v-2.5z"
        clip-rule="evenodd"
      >
      </path>
    </svg>
  </label>
  <label
    aria-label="Høyrestilt"
    data-tooltip="Høyrestilt"
    data-placement="top"
    data-autoplacement="true"
    data-variant="tertiary"
  >
    <input
      type="radio"
      value="høyrestilt"
      name="togglegroup-name-_r_q_"
    >
    <svg
      xmlns="http://www.w3.org/2000/svg"
      width="1em"
      height="1em"
      fill="none"
      viewbox="0 0 24 24"
      focusable="false"
      role="img"
      aria-hidden="true"
    >
      <path
        fill="currentColor"
        fill-rule="evenodd"
        d="M20 20.75a.75.75 0 0 1-.75-.75V4a.75.75 0 0 1 1.5 0v16a.75.75 0 0 1-.75.75M17.75 10a.75.75 0 0 1-.75.75H4a.75.75 0 0 1-.75-.75V6A.75.75 0 0 1 4 5.25h13a.75.75 0 0 1 .75.75zm-1.5-.75v-2.5H4.75v2.5zm.75 9.5a.75.75 0 0 0 .75-.75v-4a.75.75 0 0 0-.75-.75h-7a.75.75 0 0 0-.75.75v4c0 .414.336.75.75.75zm-.75-4v2.5h-5.5v-2.5z"
        clip-rule="evenodd"
      >
      </path>
    </svg>
  </label>
</fieldset>
`;

exports[`Only Text 1`] = `
<label>
  Filtrering av skjema
</label>
<fieldset
  data-toggle-group
  data-variant="primary"
>
  <label data-variant="tertiary">
    <input
      type="radio"
      value="personlig"
      checked
      name="togglegroup-name-_r_f_"
    >
    Personlig
  </label>
  <label data-variant="tertiary">
    <input
      type="radio"
      value="generelt"
      name="togglegroup-name-_r_f_"
    >
    Generelt
  </label>
  <label data-variant="tertiary">
    <input
      type="radio"
      value="tilleggsinformasjon"
      name="togglegroup-name-_r_f_"
    >
    Tilleggsinformasjon
  </label>
</fieldset>
`;

exports[`Preview 1`] = `
<fieldset
  data-toggle-group
  data-variant="primary"
>
  <label data-variant="tertiary">
    <input
      type="radio"
      value="innboks"
      checked
      name="togglegroup-name-_r_0_"
    >
    Innboks
  </label>
  <label data-variant="tertiary">
    <input
      type="radio"
      value="utkast"
      name="togglegroup-name-_r_0_"
    >
    Utkast
  </label>
  <label data-variant="tertiary">
    <input
      type="radio"
      value="arkiv"
      name="togglegroup-name-_r_0_"
    >
    Arkiv
  </label>
  <label data-variant="tertiary">
    <input
      type="radio"
      value="sendt"
      name="togglegroup-name-_r_0_"
    >
    Sendt
  </label>
</fieldset>
`;

exports[`Primary 1`] = `
<fieldset
  data-toggle-group
  data-variant="primary"
>
  <label data-variant="tertiary">
    <input
      type="radio"
      value="innboks"
      checked
      name="togglegroup-name-_r_5_"
    >
    Innboks
  </label>
  <label data-variant="tertiary">
    <input
      type="radio"
      value="utkast"
      name="togglegroup-name-_r_5_"
    >
    Utkast
  </label>
  <label data-variant="tertiary">
    <input
      type="radio"
      value="arkiv"
      name="togglegroup-name-_r_5_"
    >
    Arkiv
  </label>
  <label data-variant="tertiary">
    <input
      type="radio"
      value="sendt"
      name="togglegroup-name-_r_5_"
    >
    Sendt
  </label>
</fieldset>
`;

exports[`Secondary 1`] = `
<fieldset
  data-toggle-group
  data-variant="secondary"
>
  <label data-variant="tertiary">
    <input
      type="radio"
      value="innboks"
      checked
      name="togglegroup-name-_r_a_"
    >
    Innboks
  </label>
  <label data-variant="tertiary">
    <input
      type="radio"
      value="utkast"
      name="togglegroup-name-_r_a_"
    >
    Utkast
  </label>
  <label data-variant="tertiary">
    <input
      type="radio"
      value="arkiv"
      name="togglegroup-name-_r_a_"
    >
    Arkiv
  </label>
  <label data-variant="tertiary">
    <input
      type="radio"
      value="sendt"
      name="togglegroup-name-_r_a_"
    >
    Sendt
  </label>
</fieldset>
`;

exports[`Secondary Only Icons 1`] = `
<fieldset
  data-toggle-group
  data-variant="secondary"
>
  <label
    aria-label="Venstrestilt"
    data-tooltip="Venstrestilt"
    data-placement="top"
    data-autoplacement="true"
    data-variant="tertiary"
  >
    <input
      type="radio"
      value="venstrestilt"
      checked
      name="togglegroup-name-_r_11_"
    >
    <svg
      xmlns="http://www.w3.org/2000/svg"
      width="1em"
      height="1em"
      fill="none"
      viewbox="0 0 24 24"
      focusable="false"
      role="img"
      aria-hidden="true"
    >
      <path
        fill="currentColor"
        fill-rule="evenodd"
        d="M4 3.25a.75.75 0 0 1 .75.75v16a.75.75 0 0 1-1.5 0V4A.75.75 0 0 1 4 3.25M6.25 6A.75.75 0 0 1 7 5.25h13a.75.75 0 0 1 .75.75v4a.75.75 0 0 1-.75.75H7a.75.75 0 0 1-.75-.75zm1.5.75v2.5h11.5v-2.5zM7 13.25a.75.75 0 0 0-.75.75v4c0 .414.336.75.75.75h7a.75.75 0 0 0 .75-.75v-4a.75.75 0 0 0-.75-.75zm.75 4v-2.5h5.5v2.5z"
        clip-rule="evenodd"
      >
      </path>
    </svg>
  </label>
  <label
    aria-label="Midtstilt"
    data-tooltip="Midtstilt"
    data-placement="top"
    data-autoplacement="true"
    data-variant="tertiary"
  >
    <input
      type="radio"
      value="midtstilt"
      name="togglegroup-name-_r_11_"
    >
    <svg
      xmlns="http://www.w3.org/2000/svg"
      width="1em"
      height="1em"
      fill="none"
      viewbox="0 0 24 24"
      focusable="false"
      role="img"
      aria-hidden="true"
    >
      <path
        fill="currentColor"
        fill-rule="evenodd"
        d="M12 3.25a.75.75 0 0 1 .75.75v1.25h5.75a.75.75 0 0 1 .75.75v4a.75.75 0 0 1-.75.75h-5.75v2.5h2.75a.75.75 0 0 1 .75.75v4a.75.75 0 0 1-.75.75h-2.75V20a.75.75 0 0 1-1.5 0v-1.25H8.5a.75.75 0 0 1-.75-.75v-4a.75.75 0 0 1 .75-.75h2.75v-2.5H5.5a.75.75 0 0 1-.75-.75V6a.75.75 0 0 1 .75-.75h5.75V4a.75.75 0 0 1 .75-.75m-.75 11.5h-2v2.5h2zm1.5 2.5h2v-2.5h-2zm-6.5-10.5h5v2.5h-5zm6.5 0v2.5h5v-2.5z"
        clip-rule="evenodd"
      >
      </path>
    </svg>
  </label>
  <label
    aria-label="Høyrestilt"
    data-tooltip="Høyrestilt"
    data-placement="top"
    data-autoplacement="true"
    data-variant="tertiary"
  >
    <input
      type="radio"
      value="høyrestilt"
      name="togglegroup-name-_r_11_"
    >
    <svg
      xmlns="http://www.w3.org/2000/svg"
      width="1em"
      height="1em"
      fill="none"
      viewbox="0 0 24 24"
      focusable="false"
      role="img"
      aria-hidden="true"
    >
      <path
        fill="currentColor"
        fill-rule="evenodd"
        d="M20 20.75a.75.75 0 0 1-.75-.75V4a.75.75 0 0 1 1.5 0v16a.75.75 0 0 1-.75.75M17.75 10a.75.75 0 0 1-.75.75H4a.75.75 0 0 1-.75-.75V6A.75.75 0 0 1 4 5.25h13a.75.75 0 0 1 .75.75zm-1.5-.75v-2.5H4.75v2.5zm.75 9.5a.75.75 0 0 0 .75-.75v-4a.75.75 0 0 0-.75-.75h-7a.75.75 0 0 0-.75.75v4c0 .414.336.75.75.75zm-.75-4v2.5h-5.5v-2.5z"
        clip-rule="evenodd"
      >
      </path>
    </svg>
  </label>
</fieldset>
`;

exports[`Text And Icons 1`] = `
<fieldset
  data-toggle-group
  data-variant="primary"
>
  <label data-variant="tertiary">
    <input
      type="radio"
      value="aktiv"
      checked
      name="togglegroup-name-_r_j_"
    >
    <svg
      xmlns="http://www.w3.org/2000/svg"
      width="1em"
      height="1em"
      fill="none"
      viewbox="0 0 24 24"
      focusable="false"
      role="img"
      aria-hidden="true"
    >
      <path
        fill="currentColor"
        fill-rule="evenodd"
        d="M3.75 12a8.25 8.25 0 1 1 16.5 0 8.25 8.25 0 0 1-16.5 0M12 2.25c-5.385 0-9.75 4.365-9.75 9.75s4.365 9.75 9.75 9.75 9.75-4.365 9.75-9.75S17.385 2.25 12 2.25m4.573 7.234a.75.75 0 1 0-1.146-.968l-4.973 5.877L8.03 11.97a.75.75 0 0 0-1.06 1.06l3 3a.75.75 0 0 0 1.102-.046z"
        clip-rule="evenodd"
      >
      </path>
    </svg>
    Aktiv
  </label>
  <label data-variant="tertiary">
    <input
      type="radio"
      value="advarsel"
      name="togglegroup-name-_r_j_"
    >
    <svg
      xmlns="http://www.w3.org/2000/svg"
      width="1em"
      height="1em"
      fill="none"
      viewbox="0 0 24 24"
      focusable="false"
      role="img"
      aria-hidden="true"
    >
      <path
        fill="currentColor"
        fill-rule="evenodd"
        d="M12 2.25a.75.75 0 0 1 .656.387l9.527 17.25A.75.75 0 0 1 21.526 21H2.474a.75.75 0 0 1-.657-1.113l9.527-17.25A.75.75 0 0 1 12 2.25m8.255 17.25L12 4.551 3.745 19.5zM12 8.75a.75.75 0 0 1 .75.75v4a.75.75 0 0 1-1.5 0v-4a.75.75 0 0 1 .75-.75m0 6.75a1 1 0 1 0 0 2 1 1 0 0 0 0-2"
        clip-rule="evenodd"
      >
      </path>
    </svg>
    Advarsel
  </label>
  <label data-variant="tertiary">
    <input
      type="radio"
      value="kritisk"
      name="togglegroup-name-_r_j_"
    >
    <svg
      xmlns="http://www.w3.org/2000/svg"
      width="1em"
      height="1em"
      fill="none"
      viewbox="0 0 24 24"
      focusable="false"
      role="img"
      aria-hidden="true"
    >
      <path
        fill="currentColor"
        fill-rule="evenodd"
        d="M8.272 2.25a.75.75 0 0 0-.53.22L2.47 7.742a.75.75 0 0 0-.22.53v7.456c0 .199.079.39.22.53l5.272 5.272c.14.141.331.22.53.22h7.456a.75.75 0 0 0 .53-.22l5.272-5.272a.75.75 0 0 0 .22-.53V8.272a.75.75 0 0 0-.22-.53L16.258 2.47a.75.75 0 0 0-.53-.22zM3.75 8.583 8.583 3.75h6.834l4.833 4.833v6.834l-4.833 4.833H8.583L3.75 15.417zm5.28-.613a.75.75 0 0 0-1.06 1.06L10.94 12l-2.97 2.97a.75.75 0 1 0 1.06 1.06L12 13.06l2.97 2.97a.75.75 0 1 0 1.06-1.06L13.06 12l2.97-2.97a.75.75 0 0 0-1.06-1.06L12 10.94z"
        clip-rule="evenodd"
      >
      </path>
    </svg>
    Kritisk
  </label>
</fieldset>
`;

exports[`Toggle Group In Color Context 1`] = `
<div
  data-variant="tinted"
  data-color="accent"
>
  <fieldset
    data-toggle-group
    data-variant="primary"
  >
    <label data-variant="tertiary">
      <input
        type="radio"
        value="innboks"
        checked
        name="togglegroup-name-_r_1j_"
      >
      Innboks
    </label>
    <label data-variant="tertiary">
      <input
        type="radio"
        value="utkast"
        name="togglegroup-name-_r_1j_"
      >
      Utkast
    </label>
    <label data-variant="tertiary">
      <input
        type="radio"
        value="arkiv"
        name="togglegroup-name-_r_1j_"
      >
      Arkiv
    </label>
    <label data-variant="tertiary">
      <input
        type="radio"
        value="sendt"
        name="togglegroup-name-_r_1j_"
      >
      Sendt
    </label>
  </fieldset>
</div>
`;
